Remove Security Manager from VM options - use simpler config